--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -276,3 +276,12 @@
     transform: rotate(0deg);
   }
 }
+
+
+
+
+.cardBorder {
+  border-width: 1px;
+  border-color: #f5f5f5;
+  background-color: #e5e5e5;
+}
